--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,111 +1,105 @@
-body {
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background: #333;
+:root {
+    --background-color: #464655;
+    --background-hover-color: #59596d;
+    --text-color: #eddfef;
+    --text-dark-color: #d5cfe1;
 }
 
-td {
-    padding: 0px;
+body {
+    font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+    background: var(--background-color);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#plataforma {
+    width: 470px;
+    padding-top: 25px;
+    font-size: 2em;
+
+    color: var(--text-color);
+    background: var(--background-color);
+}
+
+#informacoesDoJogo {
+    width: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 h4 {
     margin-bottom: 15px;
 }
 
-input {
-    background-color: rgb(83, 83, 83);
-    border: 0px;
-    transition: 0.3s;
+#vitorias {
     font-size: 0.8em;
-    color: #333;
 }
 
-input:hover {
-    background-color: rgb(107, 107, 107);
+#vitorias > div {
+    margin: 15px 0px;
 }
 
-input:focus {
-    background-color: rgb(107, 107, 107);
+.labelVitorias {
+    width: 85px;
+    padding: 1px 2px;
+    display: inline-block;
+    font-size: 0.8em;
+}
+
+#botoes {
+    width: 150px;
+    margin-left: 60px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#botoes > button {
+    margin: 8px 0px;
 }
 
 .btn-comando {
-    font: 1em "Lucida Grande", Helvetica, Arial, sans-serif;
-    background-color: rgb(83, 83, 83);
-    color: #333;
-    border: 0.2em solid rgb(83, 83, 83);
-    transition: 0.5s;
+    padding: 0.2em;
+    font-size: 1em;
+
+    color: var(--background-color);
+    background-color: var(--text-dark-color);
+
+    border: none;
+
     cursor: pointer;
+    transition: 0.5s;
 }
 
 .btn-comando:hover {
-    background-color: rgb(107, 107, 107);
-    border: 0.2em solid rgb(107, 107, 107);
+    background-color: var(--text-color);
+}
+
+#tabuleiro {
+    width: 470px;
+    margin-top: 50px;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+
+    background-color: var(--text-dark-color);
 }
 
 .celula {
-    width: 110%;
-    height: 110%;
-    color: rgb(83, 83, 83);
-    font: 11em "Lucida Grande", Helvetica, Arial, sans-serif;
-    background-color: #333;
-    border: 0.1em solid rgb(83, 83, 83);
+    padding: 0px;
+    width: 150px;
+    height: 150px;
+
+    background-color: var(--background-color);
     transition: 0.5s;
     cursor: pointer;
 }
 
 .celula:hover {
-    background-color: rgb(107, 107, 107);
-}
-
-#plataforma {
-    padding-left: 25px;
-    padding-top: 25px;
-    font: 2em "Lucida Grande", Helvetica, Arial, sans-serif;
-    background: #333;
-    color: #bbbbbb;
-}
-
-#tabuleiro {
-    margin: 64px auto 0px auto;
-}
-
-#casa1 {
-    border-left: 0px;
-    border-top: 0px;
-    border-bottom: 0px;
-}
-
-#casa2 {
-    border-top: 0px;
-    border-bottom: 0px;
-}
-
-#casa3 {
-    border-right: 0px;
-    border-top: 0px;
-    border-bottom: 0px;
-}
-
-#casa4 {
-    border-left: 0px;
-}
-
-#casa6 {
-    border-right: 0px;
-}
-
-#casa7 {
-    border-left: 0px;
-    border-bottom: 0px;
-    border-top: 0px;
-}
-
-#casa8 {
-    border-bottom: 0px;
-    border-top: 0px;
-}
-
-#casa9 {
-    border-right: 0px;
-    border-bottom: 0px;
-    border-top: 0px;
+    background-color: var(--background-hover-color);
 }
